--- a/index.html
+++ b/index.html
@@ -279,24 +279,10 @@ My research aims to solve challenges such as:
 
 <p><center><img src="img/SPEAR2_title.png" width="450" height="550"></img></center></p>
 
-<p>I lead the <span style="color:red">S</span>oftware <span style="color:red">PE</span>rformance, <span style="color:red">A</span>nalysis, and <span style="color:red">R</span>eliability (SPEAR) lab at Concordia University. My research focuses on improving the quality of large-scale software systems. Specifically, I work on areas such as log analysis and AIOps, software performance analysis, software testing, and mining software repositories. My research group has extensive collaboration with companies such as Ericsson, Microsoft, and BlackBerry. <!--My research has received multiple prestigious awards and I am ranked as one of the most active software engineering researchers around the world. -->The research tools developed by myself and my students were integrated into industrial practice for ensuring the quality of large-scale enterprise systems.</p>
-
+<p>Hi, my name is Hinh. I have a degree in telecommunications engineering from Hanoi University of Technology and a master's degree in telecommunications engineering from the same school. Through my learning journey, I have gained in-depth knowledge and skills in the field of electronics and telecommunications.
+Currently, I am the Head of Technology Department at the Institute of Post and Telecommunications Technology. In this role, I am involved in the management and development of science and technology research projects, ensuring the implementation of the latest technologies and promoting innovative technology solutions in the telecommunications and postal sectors. main. primarily.
+I am passionate about technology and constantly strive to contribute to the advancement of the telecommunications industry. I stay up to date with the latest knowledge and continue to learn to keep up with emerging technology trends and apply them to my work.</p>
 <p>In particular, my research aims to solve challenges such as:</p>
-
-<ul>
-<li>Can we quickly help developers debug production systems by utilizing rich software data?</li>
-<li>Can we provide suggestions on how to optimize the software system by analyzing user usage data?</li>
-<li>How to improve software quality assurances in DevOps environments by analyzing test results from continuous integration?</li>
-<li>Can we provide useful suggestions to developers by mining software development history?</li>
-</ul>
-
-<!--
-I spent four years working as an embedded researchers in the Performance Engineer at BlackBerry, where I developed tools for detecting database-related performance bugs using both static (<a href="papers/peter_icse2014.pdf">ICSE 2014</a>) and dynamic analysis (<a href="papers/peter_tse2016.pdf">TSE 2016</a>). The tools that I developed are integrated into industrial practice and our experience reports are published in the premier conference in the Software Engineering community (<a href="papers/peter_icse_seip2016.pdf">ICSE-SEIP 2016</a> and <a href="">ICSE-SEIP 2017</a>).
-
-I also have research experiences and interests in many areas of Software Engineering and Data Mining, including, but not limited to, text analysis (<a href="papers/peter_msr2012.pdf">MSR 2012</a>, <a href="papers/peter_jss2016.pdf">JSS 2016</a>, and <a href="papers/peter_emse_survey2015.pdf">EMSE 2016</a>), mining software repositories (<a href="papers/peter_msr2014.pdf">MSR 2014</a> and <a href="papers/tarek_apm_msr2016.pdf">MSR 2016-1</a>), and empirical software engineering (<a href="papers/peter_orm_msr2016.pdf">MSR 2016-2</a>).
--->
-
-<p><strong><i>To perspective graduate students:</i></strong> Concordia has a very strong research presence in Software Engineering. Concordia&rsquo;s Software Engineering is currently ranked as <a href="http://csrankings.org/#/index?soft&world">the top 10 in the world</a>. Concordia is also ranked as one of the <a href="https://www.topuniversities.com/university-rankings/top-50-under-50/2020" >top 100 universities under 50 years old in the world </a>. Montreal is the second largest city in Canada and is ranked as the <a href="http://www.cbc.ca/news/canada/montreal/montreal-named-world-s-best-city-for-students-1.3984987">best city for students in the world</a>.</p>
 
 <hr>
 
